# agent-skills-in-practice

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MASTER-INDEX.md  QUICK-REFERENCE.md  README.md  ROADMAP.md  package.json  品質改善 施策検討.md
assets/diagrams/: README.md
docs/: 00-COVER.md
docs/00-fundamentals/: 01-ecosystem-overview.md  02-environment-setup.md
docs/01-fundamentals/: 01-ecosystem-overview.md  02-environment-setup.md
docs/01-skill-creation/: 01-what-are-agent-skills.md  02-skill-creator-hands-on.md  03-skillmd-customization.md  04-best-practices.md
docs/02-discovery/: 01-find-skills.md  02-skill-sh-cli.md  03-sharing-team-deployment.md  04-baoyu-skills-discovery.md
docs/02-skill-creation/: 01-what-are-agent-skills.md  02-skill-creator-hands-on.md  03-skillmd-customization.md  04-best-practices.md
docs/03-discovery/: 01-find-skills.md  02-skill-sh-cli.md  03-sharing-team-deployment.md  04-baoyu-skills-discovery.md
docs/03-frameworks/: 01-superpowers.md  02-gstack-overview.md  03-3a-frontend-design.md  03-3b-ui-ux-pro-max.md  03-ai-code-challenges.md  03-frontend-design.md  04-problem-skill-mapping.md  04-ui-ux-pro-max.md  (+4 more)
ebook-output/: README.md  agent-skills-in-practice-kdp-registration.md  agent-skills-in-practice.epub  agent-skills-in-practice.manuscript.md  agent-skills-in-practice.print.html
samples/document-workflow/office-to-markdown/: SKILL.md  pyproject.toml
samples/document-workflow/office-to-markdown/scripts/: check_output.py  office2md.py  requirements.txt
samples/document-workflow/office-to-markdown/tests/: test_check_output.py
(+79 files in other folders)
