[project]
name = "office-to-markdown"
version = "0.1.0"
requires-python = ">=3.10,<3.14"
dependencies = [
    "markitdown[docx,xlsx,pptx,pdf]>=0.1.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
# 方針B: LLM ビジョンを使う場合
mode-b = ["openai>=1.0.0"]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.uv]
package = false
